NIFI-13744 Improved readability of TestExcelReader unit test by defining more variables and renaming others.